# synergy-core

./: CMakeLists.txt  README.md  synergy.conf
cmake/: Version.cmake
dart_lib/: .gitignore  api.h  pubspec.yaml
dart_lib/lib/: generated_bindings.dart  main.dart  std_server.dart
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt
src/cmd/hello_world/: CMakeLists.txt  hello.c  synergy_flutter.cpp
src/cmd/synergy_flutter/: CMakeLists.txt  synergy_flutter.cpp
src/flutter/: CMakeLists.txt
src/flutter/hello_world/: CMakeLists.txt  DummyClientProxy.cpp  DummyClientProxy.h  LocalServer.cpp  MyStream.cpp  api.cpp
src/flutter/synergy_flutter/: CMakeLists.txt  DummyClientProxy.cpp  DummyClientProxy.h  MyStream.cpp  MyStream.h  my_args.h  synergy_flutter.cpp
src/lib/net/: DummyListenSocket.cpp  DummyListenSocket.h  DummySocket.cpp  DummySocket.h  DummySocketFactory.cpp  DummySocketFactory.h
src/lib/server/: DummyClientListener.cpp  DummyClientListener.h  Server.cpp  Server.h
src/lib/synergy/: App.cpp  ArgParser.cpp  Barrier.WyeQHa  DummyServerApp.cpp  DummyServerApp.h
synergy_test/: pubspec.yaml
synergy_test/lib/: main.dart
